implementação do typeORM

--- a/Frontend/join-example/src/app/components/header/header.component.html
+++ b/Frontend/join-example/src/app/components/header/header.component.html
@@ -1,2 +1,5 @@
-<p>header works!</p>
-
+<header>
+  <h1>{{ tittle }}</h1>
+  <app-button></app-button>
+  <app-button color="green" text:"Add"></app-button>
+</header>
