--- a/Frontend/join-example/src/app/app.component.html
+++ b/Frontend/join-example/src/app/app.component.html
@@ -1,10 +1,7 @@
-<h1>Exemplo Inner Join</h1>
-<h1>lala</h1>
-
+<app-header></app-header>
 <div class="container">
-  <app-header></app-header>
-  <h1>lala
 
-  </h1>
 </div>
+<app-footer></app-footer>
+
 
