implementaçção dos modulos

--- a/Frontend/join-example/src/app/app.component.html
+++ b/Frontend/join-example/src/app/app.component.html
@@ -1,9 +1,16 @@
 
 
 <app-header></app-header>
-<div class="container">
+<main>
+  <section class="container">
+    <app-pessoas></app-pessoas>
+  </section>
+  <section class="container">
+    <app-animais></app-animais>
+  </section>
+  <section class="container">
+    <app-meus-animais></app-meus-animais>
+  </section>
+</main>
 
-</div>
 <app-footer></app-footer>
-
-
