implementação do adicionar pessoa

--- a/Frontend/join-example/src/app/animais/adicionar-animais/adicionar-animais.component.html
+++ b/Frontend/join-example/src/app/animais/adicionar-animais/adicionar-animais.component.html
@@ -1,1 +1,5 @@
-<p>adicionar-animais works!</p>
+<button
+  mat-raised-button
+  color="primary"
+  (click)="adicionarAnimal()">Adicionar Animal
+</button>
