--- a/Frontend/join-example/src/app/animais/lista-animais/lista-animais.component.html
+++ b/Frontend/join-example/src/app/animais/lista-animais/lista-animais.component.html
@@ -1,1 +1,32 @@
-<p>lista-animais works!</p>
+<table mat-table [dataSource]="animais" class="mat-elevation-z8">
+
+
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef> id </th>
+    <td mat-cell *matCellDef="let animais"> {{animais.id}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="nome">
+    <th mat-header-cell *matHeaderCellDef> Nome </th>
+    <td mat-cell *matCellDef="let animais"> {{animais.nome}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="idade">
+    <th mat-header-cell *matHeaderCellDef> Idade </th>
+    <td mat-cell *matCellDef="let animais"> {{animais.idade}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="especie">
+    <th mat-header-cell *matHeaderCellDef> Especie </th>
+    <td mat-cell *matCellDef="let animais"> {{animais.especie}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="genero">
+    <th mat-header-cell *matHeaderCellDef> Genero </th>
+    <td mat-cell *matCellDef="let animais"> {{animais.genero}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="columnsToDisplay "></tr>
+  <tr mat-row *matRowDef="let row; columns: columnsToDisplay ;"></tr>
+
+</table>
