--- a/Frontend/join-example/src/app/pessoas/adicionar-pessoas/adicionar-pessoas.component.html
+++ b/Frontend/join-example/src/app/pessoas/adicionar-pessoas/adicionar-pessoas.component.html
@@ -1,1 +1,5 @@
-<p>adicionar-pessoas works!</p>
+<button
+  mat-raised-button
+  color="primary"
+  (click)="adicionarPessoa()">Adicionar Pessoa
+</button>
