estilização minima e responsivo

--- a/Frontend/join-example/src/app/components/header/header.component.css
+++ b/Frontend/join-example/src/app/components/header/header.component.css
@@ -2,7 +2,7 @@ header{
   margin-top: 20px;
   display: flex;
   align-items: center;
-  justify-content: center
+  justify-content: center;
 }
 h1{
   color:rgb(0, 0, 0);
