--- a/Frontend/join-example/src/app/animais/lista-animais/lista-animais.component.html
+++ b/Frontend/join-example/src/app/animais/lista-animais/lista-animais.component.html
@@ -1,11 +1,6 @@
 <table mat-table [dataSource]="animais" class="mat-elevation-z8">
 
 
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef> id </th>
-    <td mat-cell *matCellDef="let animais"> {{animais.id}} </td>
-  </ng-container>
-
   <ng-container matColumnDef="nome">
     <th mat-header-cell *matHeaderCellDef> Nome </th>
     <td mat-cell *matCellDef="let animais"> {{animais.nome}} </td>
@@ -24,6 +19,15 @@
   <ng-container matColumnDef="genero">
     <th mat-header-cell *matHeaderCellDef> Genero </th>
     <td mat-cell *matCellDef="let animais"> {{animais.genero}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="excluir">
+    <th mat-header-cell *matHeaderCellDef> Excluir </th>
+    <td mat-cell *matCellDef="let animais">
+      <button mat-icon-button	color="warn" (click)="deletaAnimal(animais.id)">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="columnsToDisplay "></tr>
