--- a/Frontend/join-example/src/app/meus-animais/lista-meus-animais/lista-meus-animais.component.html
+++ b/Frontend/join-example/src/app/meus-animais/lista-meus-animais/lista-meus-animais.component.html
@@ -1,1 +1,18 @@
-<p>lista-meus-animais works!</p>
+<div class="flex">
+  <mat-form-field appearance="fill">
+    <mat-label>Selecione um tutor</mat-label>
+    <mat-select  required [(value)]="selecionado">
+      <mat-option *ngFor="let pessoa of pessoas" [value]="pessoa.id">
+        {{pessoa.nome}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+  <button
+    mat-button
+    color="primary"
+    (click)="meusAnimais()">
+    Verificar
+  </button>
+</div>
+
+
