--- a/Frontend/join-example/src/app/animais/adicionar-animais/form-dialog/form-dialog.component.html
+++ b/Frontend/join-example/src/app/animais/adicionar-animais/form-dialog/form-dialog.component.html
@@ -15,11 +15,11 @@
     <mat-form-field class="example-full-width">
       <mat-label>Espécie</mat-label>
       <mat-select required formControlName="especie" name="especie">
-        <mat-option value="Feminino">Cachorro</mat-option>
-        <mat-option value="Masculino">Gato</mat-option>
-        <mat-option value="Masculino">Pássaro</mat-option>
-        <mat-option value="Masculino">Réptil </mat-option>
-        <mat-option value="Masculino">Peixe </mat-option>
+        <mat-option value="Cachorro">Cachorro</mat-option>
+        <mat-option value="Gato">Gato</mat-option>
+        <mat-option value="Pássaro">Pássaro</mat-option>
+        <mat-option value="Réptil">Réptil </mat-option>
+        <mat-option value="Peixe">Peixe </mat-option>
       </mat-select>
     </mat-form-field>
 
