--- a/Frontend/join-example/src/app/components/footer/footer.component.css
+++ b/Frontend/join-example/src/app/components/footer/footer.component.css
@@ -1,9 +1,7 @@
-footer{
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding: 1rem;
-  color: aliceblue;
-  text-align: center;
+.footer{
+  display: flex;
+  justify-content: space-around;
+};
+a{
+  text-decoration: none;
 }
