--- a/Frontend/join-example/src/app/components/footer/footer.component.html
+++ b/Frontend/join-example/src/app/components/footer/footer.component.html
@@ -1,6 +1,8 @@
 
-<div>
+<div class="footer">
   <h3>Site realizado por Nicolas</h3>
-  <p>Meu gitHub:</p>
-  <a href="https://github.com/nichcm">meu gitHub</a>
+  <button>
+    <a href="https://github.com/nichcm">meu gitHub</a>
+  </button>
+
 </div>
