--- a/Frontend/join-example/src/app/meus-animais/lista-meus-animais/lista-meus-animais.component.html
+++ b/Frontend/join-example/src/app/meus-animais/lista-meus-animais/lista-meus-animais.component.html
@@ -14,5 +14,29 @@
     Verificar
   </button>
 </div>
+<table mat-table [dataSource]="animais" class="table mat-elevation-z8">
+  <ng-container matColumnDef="nome">
+    <th mat-header-cell *matHeaderCellDef> Nome </th>
+    <td mat-cell *matCellDef="let animais"> {{animais.animal_nome}} </td>
+  </ng-container>
 
+  <ng-container matColumnDef="idade">
+    <th mat-header-cell *matHeaderCellDef> Idade </th>
+    <td mat-cell *matCellDef="let animais"> {{animais.animal_idade}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="especie">
+    <th mat-header-cell *matHeaderCellDef> Especie </th>
+    <td mat-cell *matCellDef="let animais"> {{animais.animal_especie}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="genero">
+    <th mat-header-cell *matHeaderCellDef> Genero </th>
+    <td mat-cell *matCellDef="let animais"> {{animais.animal_genero}} </td>
+  </ng-container>
+
+
+  <tr mat-header-row *matHeaderRowDef="columnsToDisplay "></tr>
+  <tr mat-row *matRowDef="let row; columns: columnsToDisplay ;"></tr>
+</table>
 
